Add new fields in Acknowledgement
