# docs/openapi.json
@@ -7,7 +7,7 @@
       "name": "Apache 2.0",
       "url": "https://www.apache.org/licenses/LICENSE-2.0"
     },
-    "version": "v5.0.0+u125"
+    "version": "@project.version@"
   },
   "externalDocs": {
     "description": "resource-catalogue Documentation",
@@ -4677,6 +4677,12 @@
             "type": "boolean"
           },
           "securityContactAck": {
+            "type": "boolean"
+          },
+          "rsopAck": {
+            "type": "boolean"
+          },
+          "nodeRegistrationPolicyAck": {
             "type": "boolean"
           }
         }
