# resource-catalogue-model-lot1/src/main/java/gr/uoa/di/madgik/resourcecatalogue/domain/Acknowledgement.java
@@ -1,7 +1,5 @@
 package gr.uoa.di.madgik.resourcecatalogue.domain;
 
-import gr.uoa.di.madgik.resourcecatalogue.annotation.FieldValidation;
-import gr.uoa.di.madgik.resourcecatalogue.annotation.VocabularyValidation;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 import jakarta.xml.bind.annotation.XmlElement;
@@ -29,6 +27,14 @@ public class Acknowledgement {
     @XmlElement()
     @Schema
     private Boolean securityContactAck;
+
+	@XmlElement()
+	@Schema
+	private Boolean rsopAck;
+
+	@XmlElement()
+	@Schema
+	private Boolean nodeRegistrationPolicyAck;
     
     public Acknowledgement() {
     }
@@ -39,6 +45,16 @@ public class Acknowledgement {
         this.monitoringServiceAck = monitoringServiceAck;
         this.securityContactAck = securityContactAck;
     }
+
+	public Acknowledgement(Boolean catalogueStoreAck, Boolean resourceHubAck, Boolean monitoringServiceAck,
+						   Boolean securityContactAck, Boolean rsopAck, Boolean nodeRegistrationPolicyAck) {
+		this.catalogueStoreAck = catalogueStoreAck;
+		this.resourceHubAck = resourceHubAck;
+		this.monitoringServiceAck = monitoringServiceAck;
+		this.securityContactAck = securityContactAck;
+		this.rsopAck = rsopAck;
+		this.nodeRegistrationPolicyAck = nodeRegistrationPolicyAck;
+	}
 
 	public Boolean getCatalogueStoreAck() {
 		return catalogueStoreAck;
@@ -72,9 +88,26 @@ public class Acknowledgement {
 		this.securityContactAck = securityContactAck;
 	}
 
+	public Boolean getRsopAck() {
+		return rsopAck;
+	}
+
+	public void setRsopAck(Boolean rsopAck) {
+		this.rsopAck = rsopAck;
+	}
+
+	public Boolean getNodeRegistrationPolicyAck() {
+		return nodeRegistrationPolicyAck;
+	}
+
+	public void setNodeRegistrationPolicyAck(Boolean nodeRegistrationPolicyAck) {
+		this.nodeRegistrationPolicyAck = nodeRegistrationPolicyAck;
+	}
+
 	@Override
 	public int hashCode() {
-		return Objects.hash(catalogueStoreAck, monitoringServiceAck, resourceHubAck, securityContactAck);
+		return Objects.hash(catalogueStoreAck, monitoringServiceAck, resourceHubAck, securityContactAck, rsopAck,
+				nodeRegistrationPolicyAck);
 	}
 
 	@Override
@@ -89,7 +122,9 @@ public class Acknowledgement {
 		return Objects.equals(catalogueStoreAck, other.catalogueStoreAck)
 				&& Objects.equals(monitoringServiceAck, other.monitoringServiceAck)
 				&& Objects.equals(resourceHubAck, other.resourceHubAck)
-				&& Objects.equals(securityContactAck, other.securityContactAck);
+				&& Objects.equals(securityContactAck, other.securityContactAck)
+				&& Objects.equals(rsopAck, other.rsopAck)
+				&& Objects.equals(nodeRegistrationPolicyAck, other.nodeRegistrationPolicyAck);
 	}
     
 
